@@ -29,6 +29,7 @@ include_HEADERS = config.h \
 	              CachedInterpolation.h \
 				  CachedVectorReprojection.h \
 	              CDMAttribute.h \
+				  CDMconstants.h \
 	              CDMDataType.h \
 	              CDMDimension.h \
 	              CDMException.h \
