@@ -54,7 +54,7 @@ test_interpolator() {
 		xAxis.push_back(i * 50000);
 		yAxis.push_back(i * 50000);
 	}
-	interpolator->changeProjection(MIFI_BILINEAR, "+proj=stere +lat_0=90 +lon_0=-32 +lat_ts=60 +elips=sphere +a="+type2string(EARTH_RADIUS_M)+" +e=0", xAxis, yAxis, "m", "m");
+	interpolator->changeProjection(MIFI_BILINEAR, "+proj=stere +lat_0=90 +lon_0=-32 +lat_ts=60 +elips=sphere +a="+type2string(MIFI_EARTH_RADIUS_M)+" +e=0", xAxis, yAxis, "m", "m");
 	//interpolator->getCDM().toXMLStream(cerr);
 	BOOST_CHECK(true);
 	
@@ -75,7 +75,7 @@ test_interpolator() {
 		for (int i = -147; i < 48; i++) {
 			yAxis.push_back(i * 50000);
 		}
-		interpolator->changeProjection(MIFI_BILINEAR, "+proj=stere +lat_0=90 +lon_0=0 +lat_ts=60 +elips=sphere +a="+type2string(EARTH_RADIUS_M)+" +e=0", xAxis, yAxis, "m", "m");
+		interpolator->changeProjection(MIFI_BILINEAR, "+proj=stere +lat_0=90 +lon_0=0 +lat_ts=60 +elips=sphere +a="+type2string(MIFI_EARTH_RADIUS_M)+" +e=0", xAxis, yAxis, "m", "m");
 		BOOST_CHECK(true);
 		NetCDF_CDMWriter(interpolator, "testInterpolator2.nc");
 		BOOST_CHECK(true);
